<resources>
    <string name="app_name">Traveller</string>
    <string name="about_text">
    </string>
    <string name="about_title">О программе</string>
    <string name="about_moscow">Москва — столица и крупнейший город России. Сюда ведут многие пути и человеческие судьбы, с этим городом связано множество роковых и знаменательных событий истории, людских радостей и надежд, несчастий и разочарований и, разумеется, легенд, мифов и преданий. Москва — блистательный город, во всех отношениях достойный называться столицей. Здесь великолепные памятники архитектуры и живописные парки, самые лучшие магазины и высокие небоскребы, длинное метро и заполненные вокзалы. Москва никогда не спит, здесь трудятся с утра до поздней ночи, а затем веселятся до утра.</string>
    <string name="rest_moscow">В Москве огромный выбор всевозможных гастрономических заведений, начиная с маленьких закусочных, пестрящих как оригинальными новыми, так и традиционно московскими («Чебуречная», «Пельменная», «Рюмочная») названиями, заканчивая ресторанами класса люкс. Здесь есть кафе, кофейни и чайные, небольшие рестораны и ресторанчики, бары и даже пабы, которые появляются и исчезают, расширяют свои сети и меняют места положения, а также те кафе и рестораны, названия и расположение которых ни разу не менялись за историю их существования.
Вашему вниманию представлены лучшие рестораны города.</string>
    <string-array name="MscMuseum">
<item>Государственная Третьяковская галерея</item>
        <item>Государственный исторический музей</item>
        <item>Государственный музей изобразительных искусств им. А.С. Пушкина</item>
        <item>Коломенское</item>
        <item>ВДНХ</item>
        <item>Алмазный фонд России</item>
        <item>Мемориальный музей космонавтики</item>
        <item>Царицыно</item>
        <item>Политехнический музей</item>
    </string-array>
    <string-array name="MscMuseumDecription">
        <item>Третьяковская галерея — это главный музей национального искусства России, отражающий его уникальный вклад в мировую культуру. Это гостеприимный музей, известный своей богатой коллекцией и многообразием представленных идей.
Перед Третьяковской галереей стоят три основные цели:
исследовать, сохранять, представлять и популяризировать искусство России;

формировать российскую культурную идентичность, привлекая внимание общества к той важной роли, которую играют в ней искусство в целом и наша коллекция в частности. Продолжать дело П.М. Третьякова, знакомя жителей страны с отечественным художественным наследием;

делать жизнь людей лучше, открывая широкий доступ к шедеврам русского и мирового искусства.</item>
        <item> крупнейший национальный исторический музей России. Основан в 1872 году, здание на Красной площади Москвы было построено в 1875—1883 годах. Участок для строительства предоставила Московская городская дума, приказав снести стоявшее там здание Главной аптеки.

Фонд современного Государственного исторического музея насчитывает более 5 млн единиц хранения и 14 млн листов документальных материалов. Постоянная экспозиция в здании на Красной площади вмещает только 0,5 % от общей коллекции. Число посетителей музея ежегодно превышает 1,2 млн человек. Штат составляют более 800 сотрудников.

В настоящее время в музейное объединение входят Храм Василия Блаженного, Музей Отечественной войны 1812 года и Палаты Романовых.

С 1990 года входит в список объектов всемирного наследия ЮНЕСКО как часть ансамбля Красной площади.</item>
        <item> московский музей зарубежного искусства, основанный профессором Московского университета Иваном Цветаевым в 1912 году. Здание музея было построено по проекту архитектора Романа Клейна в неоклассическом стиле в виде античного храма. Изначально музей был задуман как учебный, однако после революции 1917 года учреждение было преобразовано в Государственный музей изобразительных искусств. В 1937-м музей получил имя поэта Александра Пушкина. В 1991 году ГМИИ имени Пушкина внесли в Государственный свод особо ценных объектов культурного наследия народов России.

По состоянию на 2018 год экспозиция состоит из более чем 700 тысяч предметов и включает в себя коллекцию слепков с античных статуй, художественные произведения, археологические находки, а также собрание предметов из Древнего Египта и Древнего Рима.</item>
        <item>Излюбленная резиденция великих русских правителей, Коломенское, сегодня входит в Московское государственное объединенное художественное историко-архитектурное и природно-ландшафтное музей-заповедник.


Расположился он на высоком берегу Москвы реки в южном районе столицы, и добраться туда можно прямо на метро. Площадь усадьбы Коломенское с прилегающей территорией составляет 390 гектаров, а история создания удивительна.</item>
        <item>Выставочный комплекс в Останкинском районе города Москвы, второй по величине выставочный комплекс в городе. Входит в 50 крупнейших выставочных центров мира. Ежегодно ВДНХ посещают 30 млн гостей. 1 августа 2019 года выставка отпраздновала 80-летний юбилей.</item>
        <item>Алмазный фонд - уникальное собрание, прошедшее длинный путь, тесно связанный с историей Российского государства, состоит из шедевров ювелирного искусства XVIII-XX веков, редких драгоценных камней, орденских знаков, самородков благородных металлов, представляющих собой огромную историческую, художественную, научную и материальную ценность.</item>
        <item>Музей космонавтики – один из крупнейших научно-исторических музеев мира. История музея началась во второй половине XX века, когда в 1964 году на карте Москвы появился монумент «Покорителям космоса».</item>
        <item>Дворцово-парковый ансамбль на юге Москвы; заложен по повелению императрицы Екатерины II в 1776 году. Находится в ведении музея-заповедника «Царицыно», основанного в 1984 году. Царицыно является памятником так называемой «русской готики» (псевдоготики); над созданием императорской резиденции в течение 20 лет работали последовательно два наиболее известных архитектора своей эпохи — Василий Баженов и Матвей Казаков. Царицыно — самая крупная в Европе псевдоготическая постройка XVIII века и единственный дворцовый комплекс, разработанный в этом стиле. Особенности дворцово-паркового ансамбля во многом определили новое направление в русском зодчестве: в разных концах бывшей Российской империи существует немало сооружений конца XVIII и начала XIX века, которые созданы под влиянием Царицына.</item>
        <item>один из старейших научно-технических музеев мира, расположен в Москве на Новой площади. Музей создан на основе фондов Политехнической выставки 1872 года по инициативе Общества любителей естествознания, антропологии и этнографии </item>

    </string-array>
    <string name="about_kazan">Казань – один из ярких примеров того, как в одном городе мирно, в атмосфере дружелюбия и терпимости живут люди разных национальностей и вероисповеданий. Этническое и религиозное разнообразие в столице Татарстана сохраняется не один век. В городе действуют 125 культовых объектов, из них 65 мечетей, 45 православных храмов, 12 церквей других христианских направлений, 1 синагога, молельные дома Бахаи и Кришны></string>
    <string-array name="KazMuseum">
        <item>Музей чак-чака</item>
        <item>Музей "Татарская слобода"</item>
        <item>Национальный музей Республики Татарстан</item>
        <item>Музей 1000-летия Казани</item>

    </string-array>
    <string-array name="KazMuseumDecription">
        <item>Чак-чак, несмотря на то, что его можно потрогать, посмотреть и даже съесть, является нематериальным наследием татар.
   В музее чак-чака  собирают, сохраняют и передают  все, что связано с чак-чаком: культуру, традиции, обряды, предметы быта и одежду, мифологию и многое другое.
   Вы обязательно попробуете на вкус настоящий чак-чак ручной работы, а так же забытую элитную его версию, которую для вас восстановили</item>
        <item>
            Музей «Татарская слобода» расположен в здании, где в XIX веке жил купец Абдулвали Чукин, а ХХ веке — ученый-филолог Якуб Агишев. В нем — несколько тематических пространств: обзорный и интерактивный залы, «Восточный клуб», зал традиций чаепития и татарское подворье. В музее установлены тач-панели, с помощью которых можно узнать о жизни казанских татар, их семейном укладе, быте и традиционной одежде. Зал, посвященный традициям татарского чаепития, оформлен в стилистике деревенской избы с печкой и самоваром. Гостей здесь угощают чаем с чак-чаком, талкыш-калеве и другими блюдами традиционной татарской кухни. Большинство экспонатов в витринах — например, серебряные украшения или старинные расшитые калфаки — можно купить</item>
   <item>Это самый крупный региональный музейный фонд России.
Коллектив уникальных профессионалов-музейщиков.
Среди них: историки, филологи, литературоведы, специалисты в области этнографии, нумизматики, эпиграфики. Музей гордится своими реставраторами, экспозиционерами, художниками, методистами и другими ценнейшими специалистами, к услугам которых обращаются десятки учреждений и простых граждан не только республики, но и России и мира.
Научно-методическая деятельностьМузей готовит и издает ежегодно десятки научных публикаций. У нас работают Ученый Совет со своими секциями, Научно-методический и Экспозиционный Советы.
Музей активно сотрудничает с ведущими научными центрами республики – Казанским (Приволжским) федеральным университетом, Институтом истории им. Ш. Марджани, Институтом языка, литературы и искусства им. Г. Ибрагимова, Институтом Татарской энциклопедии Академии наук РТ и др., ведущими музеями России.</item>
   <item>В состав Национального культурного центра «Казань» входит музейный комплекс, включающий Музей национальной культуры, Музей 1000-летия Казани, музей народного художника Татарстана Баки Урманче, музей художника Амира Мазитова, художественная галерея им. И.Зарипова, картинная галерея К.Васильева.
Музей 1000-летия города Казани раскрывает историческое и культурное наследие татарского народа с древних времен до настоящего времени и повествует о тысячелетней истории города через многообразие художественного и документального материала, подлинных экспонатов.</item>

    </string-array>
    <string name="about_sochi">Сочи – курортный город, расположенный на Черноморском побережье Краснодарского края. Большим Сочи называют также курортную зону федерального значения, которая объединяет сам город Сочи и несколько прибрежных поселений. Отдых в Сочи интересен в любое время года. Летом туристов привлекают сюда теплое море, пляжи, жаркое солнце и буйство субтропической растительности. Зимой Сочи удивляет своими контрастами. На побережье может быть очень тепло и зелено. В то же время в районе Красной поляны горные склоны покрывает снег, и туристы катаются на лыжах.

</string>
    <string-array name="SochiMuseum">
        <item>Музейный центр в Олимпийском парке</item>
        <item>Дача Сталина</item>
        <item>Сочинский художественный музей</item>
        <item>Музей истории города-курорта Сочи</item>
        <item>Сочи Автомузей</item>
        <item></item>
    </string-array>
        <string name="hint_title">Заголовок заметки:</string>
        <string name="hint_description">Описание заметки:</string>
        <string name="priority_1">1</string>
        <string name="priority_2">2</string>
        <string name="priority_3">3</string>
        <string name="button_save_note">ДОБАВИТЬ ЗАМЕТКУ</string>
</resources>