<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"

        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_title"
        android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/hint_description"/>

    <Spinner
        android:id="@+id/spinnerDaysOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/days_of_week"/>


    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/holo_red_light"
        android:text="@string/priority_1" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/priority_2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/holo_green_light"
        android:text="@string/priority_3" />


    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_purple"
        android:onClick="onClickSaveNote"
        android:text="@string/button_save_note"
        android:textColor="@android:color/background_light" />
</LinearLayout>